Update SIGMA HOME PAGE.html

--- a/SIGMA HOME PAGE.html
+++ b/SIGMA HOME PAGE.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="SIGMA.CSS">
 	<link rel="stylesheet" type="text/css" href="/bootstrap-5.0.2-dist/css/">
-	<title>home</title>
+	<title>homepage</title>
 </head>
 <body>
 	<h1>WELCOME TO SIGMA'S KITCHEN</h1>
