Update SIGMA HOME PAGE.html

--- a/SIGMA HOME PAGE.html
+++ b/SIGMA HOME PAGE.html
@@ -10,7 +10,7 @@
 	<form>
 <h2>Register Here</h2>
 <p>Please fill in the details to create an account with us.</p>
-
+<p>Sigma kitchen is the best Around.</p>
 <form name="frmContact" class="needs-validation " method="post" action="contact.php">
     <p>
       <label for="Name">Your Name </label>
