Update SIGMA HOME PAGE.html

--- a/SIGMA HOME PAGE.html
+++ b/SIGMA HOME PAGE.html
@@ -35,5 +35,16 @@
       <input type="submit" name="Submit" id="Submit" value="Click me to Contact"  class="btn btn-primary btn-lg btn-block">
     </p>
   </form>
+	
+	<div class="bhours">
+<div class="bh"><h3>BUSSINESS HOURS</h3></div>
+<h4>WORKING DAYS</h4>
+<div class="day">FRIDAY THROUNGH MONDAY</div>
+<h5>7:00AM-6:00PM</h5>
+<h4>WEEKEND DAYS </h4>
+<div class="day">SATURDAY THROUNGH SUNDAY</div>
+<h5>9:00AM-4:00PM</h5>
+</div>
+	
 </body>
 </html>
