Update SIGMA HOME PAGE.html

--- a/SIGMA HOME PAGE.html
+++ b/SIGMA HOME PAGE.html
@@ -27,6 +27,9 @@
       <input type="text"  class="form-control" name="txtPhone" id="txtPhone" placeholder="Phone" value="" required>
     </p>
     <p>
+      What will you like to order! 
+    </p> 
+    <p>
       <label for="message">Message</label>
       <textarea name="txtMessage" class="form-control"  id="txtMessage"  placeholder="Message" required></textarea>
     </p>
