--- a/sales.html
+++ b/sales.html
@@ -24,9 +24,9 @@
 
     <nav>
         <ul>
-            <li><a href = "The E-Chemist.html">HOME</a></li>
-            <li><a href="The E-Chemist consultancy.html"> CONSULTANCY</a></li>
-            <li><a href = "Pharmacy.html">PHARMACY</a></li>
+            <li><a href = "The hompage.html">HOME</a></li>
+            <li><a href="The sales.html"> CONSULTANCY</a></li>
+            <li><a href = "order.html">ORDER</a></li>
             <li><a href = "Emergency Services.html">EMERGENCY SERVICE</a></li>
             
         </ul>
