--- a/ORDER.html
+++ b/ORDER.html
@@ -13,7 +13,7 @@
 <header>
     <a name="HOME"></a>
     <h1>SIGMA <span>KITCHEN</span></h1>
-    <h6><i>...your No1 online medical Service..you order;we deliver...</i></h6>
+    <h6><i>...your No1 online fast food ordering Service..you order;we deliver...</i></h6>
     <hr>      
 
     <nav>
