--- a/ORDER.html
+++ b/ORDER.html
@@ -3,7 +3,7 @@
 <head>
    
     <title>ORDER</title>
-    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <link rel="stylesheet" type="text/css" href="order.css"> 
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet">
