--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <header>
     <a name="HOME"></a>
     <h1><marquee>SIGMA'S CONTACT!</marquee></h1>
-    <h6><i>...your No1 online medical Service..you order;we deliver...</i></h6>
+    <h6><i>...your No1 online fast food..you order;we deliver...</i></h6>
     <hr>      
 
     <form action="mail.php" method="POST">
