--- a/sigma_home_page.html
+++ b/sigma_home_page.html
@@ -16,22 +16,22 @@
 
 <form name="frmContact" class="needs-validation " method="post" action="contact.php">
     <p>
-      <label for="Name">Your Name </label>
+      <label for="Name">Full Name </label>
       <input type="text" class="form-control" name="txtName" id="txtName" placeholder="Name" value="" required>
 	  <div class="invalid-feedback">
                   Valid first name is required.
                 </div>
     </p>
     <p>
-      <label for="email">Your Email</label>
+      <label for="email">Email Address</label>
       <input type="email"  class="form-control"  name="txtEmail" id="txtEmail" placeholder="Email" value="" required>
     </p>
     <p>
-      <label for="phone">Your Phone</label>
+      <label for="phone">Phone Number</label>
       <input type="number"  class="form-control" name="txtPhone" id="txtPhone" placeholder="Phone" value="" required>
     </p>
     <p>
-      <label for="message">Message</label>
+      <label for="message">Please Type Your Message</label>
       <textarea name="txtMessage" class="form-control"  id="txtMessage"  placeholder="Message" required></textarea>
     </p>
     <p>&nbsp;</p>
