--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <a name="HOME"></a>
     <h1><marquee>SIGMA'S CONTACT!</marquee></h1>
     <h6><i>...your No1 online fast food..you order;we deliver...</i></h6>
-    <hr>      
+	</header>     
 
     <form action="mail.php" method="POST">
 		<p>Name</p> <input type="text" name="name">
